Fixed "./gradlew test" tests